--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@ PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/mydatabase
 
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD_HASH=$2a$10$VoeYZzqLbNacOjWq0RjQneKJeRdzDNtHDqDxYrvUJHhF4N89fyLqy
+ADMIN_PASSWORD_HASH=$2b$10$t.wbMsqQFVxn6z8o46Nk2eoSUpdCZhg5WAJb.sdp43kVI1dN/kfk.
 
 
